# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #
[package]
name = "ebpf-probes"
version = "0.0.0"
edition = "2021"
license = "Dual MIT/GPL"

[dependencies]
aurae-ebpf-shared = { path = "../ebpf-shared" }
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"

[[bin]]
name = "instrument-tracepoint-signal-signal-generate"
path = "src/probe-tracepoint-signal-signal-generate.rs"

[[bin]]
name = "instrument-tracepoint-sched-sched-process-fork"
path = "src/probe-tracepoint-sched-sched-process-fork.rs"

[[bin]]
name = "instrument-kprobe-taskstats-exit"
path = "src/probe-kprobe-taskstats-exit.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
