[package]
name = "aurae-client-macros"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
proto-reader = { path = "../../crates/proto-reader" } # using workspace isn't working
quote = { workspace = true }
syn = { workspace = true }