# ---------------------------------------------------------------------------- #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
# ---------------------------------------------------------------------------- #
# Copyright 2022 - 2024, the aurae contributors                                #
# SPDX-License-Identifier: Apache-2.0                                          #
# ---------------------------------------------------------------------------- #
[package]
name = "client-macros"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
proto-reader = { path = "../../crates/proto-reader" } # using workspace isn't working
quote = { workspace = true }
syn = { workspace = true }
