[package]
name = "aurae-executables"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
aurae-client = { path = "../aurae-client" }
clone3 = "0.2.3"
nix = { version = "0.26.1", features = ["mount", "sched", "fs", "process"] }
procfs = "0.14.2"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.2.2", features = ["v4"] }
validation = { path = "../validation" }