[package]
name = "vmm-reference"
version = "0.1.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
vmm = { path = "src/vmm" }
api = { path = "src/api" }

[workspace]
members = ["src/vm-vcpu-ref"]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[patch.crates-io]
# TODO: Using this patch until a version > 4.0 gets published.
linux-loader = { git = "https://github.com/rust-vmm/linux-loader.git", rev = "9a9f071" }
