[package]
name = "proto-reader"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[dependencies]
#heck = { workspace = true }
proc-macro2 = { workspace = true }
protobuf = { workspace = true }
protobuf-parse = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }