[package]
name = "validation"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
regex = ["dep:fancy-regex", "dep:lazy_static"]
secrecy = ["dep:secrecy"]
tonic = ["dep:tonic"]
url = ["dep:url"]

[dependencies]
fancy-regex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
thiserror = { workspace = true }
validator = "0.16.0"
secrecy = { version = "0.8.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0.87", optional = true }
tonic = { workspace = true, optional = true }
url = { version = "2.3.1", optional = true }

[dev-dependencies]
num_enum = "0.5.7"
num_enum_derive = "0.5.7"