# ---------------------------------------------------------------------------- #
#                Apache 2.0 License Copyright The Aurae Authors                #
#                                                                              #
#                +--------------------------------------------+                #
#                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |                #
#                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |                #
#                |  ███████║██║   ██║██████╔╝███████║█████╗   |                #
#                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |                #
#                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |                #
#                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |                #
#                +--------------------------------------------+                #
#                                                                              #
#                         Distributed Systems Runtime                          #
#                                                                              #
# ---------------------------------------------------------------------------- #
#                                                                              #
#   Licensed under the Apache License, Version 2.0 (the "License");            #
#   you may not use this file except in compliance with the License.           #
#   You may obtain a copy of the License at                                    #
#                                                                              #
#       http://www.apache.org/licenses/LICENSE-2.0                             #
#                                                                              #
#   Unless required by applicable law or agreed to in writing, software        #
#   distributed under the License is distributed on an "AS IS" BASIS,          #
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   #
#   See the License for the specific language governing permissions and        #
#   limitations under the License.                                             #
#                                                                              #
# ---------------------------------------------------------------------------- #

[package]
name = "validation"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
regex = ["dep:fancy-regex", "dep:lazy_static"]
secrecy = ["dep:secrecy"]
tonic = ["dep:tonic"]
url = ["dep:url"]

[dependencies]
fancy-regex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
thiserror = { workspace = true }
validator = "0.16.0"
secrecy = { version = "0.8.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
num_enum = "0.5.7"
num_enum_derive = "0.5.7"
