[package]
name = "validation"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["The Aurae Authors", "Kris Nóva <kris@nivenly.com>"]
license = "Apache-2.0"

[features]
default = []
json = ["dep:serde", "dep:serde_json"]
regex = ["dep:fancy-regex", "dep:lazy_static"]
secrecy = ["dep:secrecy"]
tonic = ["dep:tonic"]
url = ["dep:url"]

[dependencies]
fancy-regex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
thiserror = { workspace = true }
validator = "0.16.1"
secrecy = { version = "0.8.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
num_enum = "0.7.2"
num_enum_derive = "0.7.2"
